--- a/src/components/widgetLeft/widgetleft.css
+++ b/src/components/widgetLeft/widgetleft.css
@@ -1,7 +1,12 @@
-.widgetSm {
-    flex:  1;
+.widgetleft {
+    flex:  2;
     box-shadow: 5px 5px 15px -10px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
     padding: 20px;
-    margin-right: 20;
+   
+}
+
+.widgetleftTitle {
+    font-size: 20px;
+    font-weight: 700;
 }
