--- a/src/Pages/products/product.css
+++ b/src/Pages/products/product.css
@@ -1,30 +1,100 @@
 .product{
     flex: 4;
+    padding: 20px;
 }
-.productList {
+.productTitleContainer {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-
-.avater {
-    width: 32px;
-    height: 32px;
+.productAddButton {
+    width: 80px;
+    border:none;
+    padding: 5px;
+    color: white;
+    background-color: rgb(92, 213, 218);
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.productTop {
+    display: flex;
+}
+.productTopeLeft,
+.productTopRight {
+    flex: 1;
+}
+.productTopRight{
+    padding: 20px;
+    margin: 20px;
+    box-shadow: 5px 5px 15px -10px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+}
+.productInfoImg {
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     object-fit: cover;
-    margin-right: 10px;
+    margin-right: 20px;
+}
+.productName {
+    font-weight: 700;
+}
+.productInfoBottom {
+    margin-top: 10px;
+}
+.productInfoItem {
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+}
+.productInfoValue {
+    font-weight: 300;
 }
 
-.editProduct {
+.productForm {
+    display: flex;
+    justify-content: space-between;
+}
+.productFormLeft {
+    display: flex;
+    flex-direction: column;
+}
+.productFormLeft > label {
+    margin-bottom: 10px;
+    color:lightblue;
+}
+.productFormLeft > input {
+    margin-bottom: 10px;
     border: none;
-    border-radius: 10%;
-    padding: 10px 10px;
-    /* background-color: cadetblue; */
-    color: darkseagreen;
-    cursor: pointer;
-    margin-right: 15p;
+    padding: 5px;
+    border-bottom: 1px solid grey;
 }
-
-.deleteProduct {
-    color: firebrick;
-    cursor: pointer;
+.productFormLeft > select {
+    margin-bottom: 10px;
 }
+.productFormRight {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.productUpload {
+     display: flex;
+    align-items: center;
+}
+.uploadImg {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    object-fit: cover;
+    margin-right: 20px ;
+}
+.productButton {
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    background-color:darkblue;
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
+} 
