--- a/src/Pages/products/product.css
+++ b/src/Pages/products/product.css
@@ -51,7 +51,9 @@
 .productInfoValue {
     font-weight: 300;
 }
-
+.productInfoKey{
+    margin-right: 20px;
+}
 .productForm {
     display: flex;
     justify-content: space-between;
